feat: implementd time-entry-log roues
